- Add underline text decoration - Fixed bug in Modal that caused it to crash when tabbing or shift tabbing with only one button

--- a/tdrs-frontend/src/assets/Reports.scss
+++ b/tdrs-frontend/src/assets/Reports.scss
@@ -47,6 +47,7 @@
   border: none;
   color: #264A64;
   text-align: left;
+  text-decoration: underline;
   margin: 0;
   padding: 0;
 }
